--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <p>My name is</p>
     </header>
     <main>
-      <img src="me.png">
-      <h1>Your name here</h1>
+      <img src="Daniel.bmp">
+      <h1>Daniel</h1>
       <p>
         Here's a good place to write a little bit about yourself.
         Include anything you want people to know about you.
@@ -26,7 +26,7 @@
       </p>
       <ul class="social">
 
-        <li><a rel="github" href="http://github.com/powershop">My code</a></li>
+        <li><a rel="github" href="http://github.com/liondbell">My code</a></li>
         <li><a rel="home" href="http://example.com">My website</a></li>
         <li><a rel="twitter" href="http://twitter.com/powershop">@powershop</a></li>
       </ul>
